chore: codespace开发使用http协议启动

--- a/apps/admin/.env.development
+++ b/apps/admin/.env.development
@@ -10,7 +10,8 @@ VITE_PUBLIC_PATH = /
 VITE_PROXY = [["/api","http://localhost:3000"]]
 
 # 是否在开发环境开启 https 和 http2（开启后将大幅优化首次启动时加载速度）
-VITE_USE_HTTPS = true
+# TODO: codespace 开发时建议关闭，否则会有502问题，待解决
+VITE_USE_HTTPS = false
 
 # 打包时是否删除console和debug
 VITE_DROP_CONSOLE = false
