--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -18,29 +18,30 @@ jobs:
           # 如果你文档需要 Git 子模块，取消注释下一行
           # submodules: true
 
-      - name: 安装 pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          run_install: true
+      # TODO: 待适配
+      # - name: 安装 pnpm
+      #   uses: pnpm/action-setup@v2
+      #   with:
+      #     run_install: true
 
 
-      - name: 设置 Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: pnpm
+      # - name: 设置 Node.js
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: '16.x'
+      #     cache: pnpm
 
 
-      - name: 构建文档
-        env:
-          NODE_OPTIONS: --max_old_space_size=8192
-        run: |-
-          pnpm run docs:build
-          > src/.vuepress/dist/.nojekyll
+      # - name: 构建文档
+      #   env:
+      #     NODE_OPTIONS: --max_old_space_size=8192
+      #   run: |-
+      #     pnpm run docs:build
+      #     > src/.vuepress/dist/.nojekyll
 
-      - name: 部署文档
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          # 这是文档部署到的分支名称
-          branch: gh-pages
-          folder: src/.vuepress/dist
+      # - name: 部署文档
+      #   uses: JamesIves/github-pages-deploy-action@v4
+      #   with:
+      #     # 这是文档部署到的分支名称
+      #     branch: gh-pages
+      #     folder: src/.vuepress/dist
