--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/NoeyNoi/admin.git",
+    "url": "git+https://github.com/NoeyNoi/radical-admin.git",
     "directory": "apps/admin"
   },
   "author": {
