--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "radical-admin-monorepo",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://github.com/NoeyNoi",
+  "homepage": "https://github.com/NoeyNoi/radical-admin",
   "bugs": {
-    "url": "https://github.com/NoeyNoi/xxx/issues"
+    "url": "https://github.com/NoeyNoi/radical-admin/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/NoeyNoi/admin.git"
+    "url": "git+https://github.com/NoeyNoi/radical-admin.git"
   },
   "author": {
     "name": "Noey",
@@ -18,6 +18,7 @@
   "scripts": {
     "bootstrap": "pnpm install --registry=https://registry.npmmirror.com/",
     "build": "pnpm --filter scripts build",
+    "docs:build": "pnpm --filter @docs/develop build",
     "report": "pnpm --filter scripts report",
     "clean": "pnpm turbo run clean && rimraf node_modules",
     "dev": "pnpm --filter scripts dev",
