--- a/package.json
+++ b/package.json
@@ -34,10 +34,18 @@
     "turbo:report": "turbo run report --parallel",
     "turbo:dev": "turbo run dev --parallel",
     "turbo:preview": "turbo run preview --parallel",
-    "preinstall": "npx only-allow pnpm"
+    "preinstall": "npx only-allow pnpm",
+    "prepare": "husky install",
+    "commit": "git add . & pnpm --filter @config/lint git-cz",
+    "lint:lint-staged": "pnpm --filter @config/lint lint-staged"
   },
   "resolutions": {
     "bin-wrapper": "npm:bin-wrapper-china"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./configs/lint/node_modules/cz-git"
+    }
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.1",
@@ -47,7 +55,9 @@
     "cross-env": "^7.0.3",
     "esno": "^0.16.3",
     "fs-extra": "^11.1.1",
+    "husky": "^8.0.3",
     "jsdom": "^21.1.1",
+    "less": "^4.1.3",
     "pathe": "^1.1.0",
     "rimraf": "^4.4.1",
     "rollup": "^3.21.0",
@@ -55,17 +65,16 @@
     "tsconfig": "workspace:*",
     "turbo": "^1.10.1",
     "typescript": "^5.0.4",
-    "unbuild": "^1.2.1",
-    "less": "^4.1.3"
+    "unbuild": "^1.2.1"
   },
   "engines": {
     "node": ">=16"
   },
   "packageManager": "pnpm@7.1.0",
   "dependencies": {
-    "unocss": "^0.53.1",
     "@ant-design/icons-vue": "^6.1.0",
     "ant-design-vue": "^3.2.20",
+    "unocss": "^0.53.1",
     "vite-plugin-mock": "^2.9.6"
   }
 }
