--- a/configs/vite/package.json
+++ b/configs/vite/package.json
@@ -33,6 +33,7 @@
     "unplugin-vue-components": "^0.25.1",
     "vite-plugin-http2-proxy": "^0.4.1",
     "vite-plugin-mkcert": "1.14.0",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue": "3.2.47"
   }
 }
