--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -12,6 +12,7 @@
     "@radical/locale": "workspace:*",
     "@radical/utils": "workspace:*",
     "@radical/stores": "workspace:*",
+    "@radical/hooks": "workspace:*",
     "vue-router": "^4.1.6",
     "path-to-regexp": "^6.2.1",
     "vue": "^3.2.47"
